feat: refatoração da modelagem de dados, recurso shop adicionado
