# app/Http/Requests/AccountRequestCreate.php
@@ -4,7 +4,7 @@ namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class AccountRequest extends FormRequest
+class AccountRequestCreate extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -25,8 +25,8 @@ class AccountRequest extends FormRequest
     {
         return [
             'fullname' => 'required',
-            'type'  => 'required',
-            'document' => 'required|unique:wallets',
+            'cpf' => 'required|unique:users',
+            'cnpj' => 'unique:shops',
             'email' => 'required|email|unique:users',
             'password'  => 'required',
         ];
@@ -41,9 +41,9 @@ class AccountRequest extends FormRequest
     {
         return [
             'fullname.required'   => 'O campo nome completo é obrigatório',
-            'type.required'   => 'O campo tipo é obrigatório',
-            'document.required'   => 'O campo documento é obrigatório',
-            'document.unique'   => 'Ja existe uma carteira com este número de documento',
+            'cpf.required'   => 'O campo cpf é obrigatório',
+            'cpf.unique'   => 'Ja existe um usuário com este número de cpf',
+            'cnpj.unique'   => 'Ja existe uma loja com este número de cnpj',
             'email.required'   => 'O campo email é obrigatório',
             'email.email'   => 'O campo email deve conter um email valido',
             'email.unique'   => 'Já existe um usuário com este e-mail cadastrado',
